[package]
name = "cita_recover"
version = "0.2.0"
authors = ["yubo <anhuitianyu@163.com>"]
edition = "2018"

[dependencies]
clap = "3.0"
log = "0.4.6"
bincode = "0.8.0"
cita-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
common-types = { path = "./types",default-features=true }
proof = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
hashable = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
rlp = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
authority_manage = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
cita-database = "0.1"
fs_extra = "1.2.0"
