[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@citahub.com>"]

[dependencies]
rlp = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
rlp_derive = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
util = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
cita-types = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
hashable = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
jsonrpc-types = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
cita-crypto = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
libproto = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
serde = "1.0"
serde_derive = "1.0"
bloomchain = "0.2"
lazy_static = "0.2"
time = "0.1"
logger = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
proof = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }
db = { git = "https://github.com/citahub/cita-common.git", rev = "c3b60920" }

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["hashable/sha3hash", "db/sha3hash", "libproto/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "db/blake2bhash", "libproto/blake2bhash"]
sm3hash = ["hashable/sm3hash", "db/sm3hash", "libproto/sm3hash"]
